# Nasa2025

./: .gitignore  BUILD_SCRIPTS.md  MAIN_UI_COMPLETE.md  NASA_APIS_INTEGRATION.md  QUICK_START.md  README.md  SETUP.md  START_STELLAREYE.md  SUMMARY.md  backend.sh  build_production.sh  build_stellareye.sh  dev_stellareye.sh  frontend.sh  package.json  run_stellareye.sh  start_stellareye.sh  stellareye.sh  test_setup.py  test_stellareye.py  test_stellareye.sh
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: exoplanets.py  images.py  objects.py  satellites.py  search.py
backend/app/core/: config.py  logging.py
backend/app/nasa/: __init__.py  data_manager.py
backend/app/schemas/: celestial.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: sw.js
frontend/src/: App.tsx  BulletproofApp.tsx  DebugApp.tsx  MapTest.tsx  MinimalTest.tsx  SimpleMapTest.tsx  index.css  test-app.tsx  test-simple-map.tsx
frontend/src/components/: ImageViewer.tsx  PerformanceMonitor.tsx
legacy/: README.md  main.py  pyproject.toml
legacy/assets/: style.css
legacy/src/: __init__.py  api_integrations.py  background_tiles.py  callbacks.py  data_sources.py  google_maps_style.py  image_gallery.py  image_handler.py  ui_components.py  visualization.py
presentation/: README.md  demo-script.md  qa-preparation.md  quick-pitch-30s.md  scaling-guide.md  slides-marp.md  slides.md
(+21 files in other folders)
